@@ -334,8 +334,6 @@ class Password(TextLine):
 class Bool(Field):
     """A field representing a Bool."""
 
-    implements(IFromUnicode)
-
     _type = type(True)
 
     if _type is not type(1):
